Mon Apr 30 22:31:59 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/general/bug-8-.out: fixed in libxml xpath
	* libxslt/templates.[ch] libxslt/pattern.c: fixed an namespace
	  problem in predicates within a pattern. Spotted another
	  potential namespace problem

Mon Apr 30 19:29:34 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c libxslt/xslt.c libxslt/xsltInternals.h
	  libxslt/xsltproc.c: counting errors and warnings at compilation
	  time. Stop processing in case of error.
	* tests/docs/bug-1[89]* tests/general/-1[89]* tests/general/inner.xsl:
	  added more namespace related bug checks

Mon Apr 30 13:47:11 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c libxslt/variables.c: found the source of a
	  memory leak with DocBook introduced this w.e.. bit of cleanup.
	* tests/docbook/result/html/*.html : regenerated the DocBook tests
	  results.

Sun Apr 29 18:54:03 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: fixing bug #53769
	* tests/general tests/docs: added new examples from the
	  bug reports to the regression tests, updated the Makefiles

Sun Apr 29 11:47:58 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* preproc.[ch] templates.[ch] variables.[ch] xslt.c xsltInternals.h
	  attributes.c extensions.[ch]: moved all stylesheet precomputation
	  at stylesheet loading time (stylesheet transform should be thread
	  safe now), improved params and variables evaluations (but optim
	  is not complete yet).
	* TODO: updated

Sat Apr 28 16:28:45 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c : changed the way --repeat works when
	  used twice

Sat Apr 28 16:19:06 CEST 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/numbers.c libxslt/preproc.c tests/REC/test-7.7-3.out:
	  fixed default formatting

Sat Apr 28 14:20:29 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c : fixed <xsl:sort/> bug reported by Ankh