@@ -11,12 +11,12 @@ EXTRA_DIST = README VERSION
 
 tests: html
 
-html: ../../libxslt/xsltproc
+html: $(top_builddir)/libxslt/xsltproc
 	@(for i in test/*.xml ; do \
 	  echo $$i ; \
 	  out=result/html/`basename $$i .xml`.tst; \
 	  html=result/html/`basename $$i .xml`.html; \
-	  ../../libxslt/xsltproc html/docbook.xsl $$i > $$out ; \
+	  $(top_builddir)/libxslt/xsltproc html/docbook.xsl $$i > $$out ; \
 	  if [ -f $$html ] ; then \
 	      grep -v id < $$html > $$html.noid ; \
 	      grep -v id < $$out > $$out.noid ; \
